--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "moment": "^2.29.1",
+    "momment": "0.0.1",
     "multer": "^1.4.3",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
