--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "moment": "^2.29.1",
