--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
+    "knex-paginate": "^3.0.0",
     "moment": "^2.29.1",
     "momment": "0.0.1",
     "multer": "^1.4.3",
