--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "knex-paginate": "^3.0.0",
