--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "client-i": "npm install --prefix client",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"nodemon server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -20,18 +23,25 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "knex-paginate": "^3.0.0",
-    "moment": "^2.29.1",
+    "moment": "^2.29.2",
     "momment": "0.0.1",
     "multer": "^1.4.3",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.7.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "quasar": "^2.6.6",
+    "sequelize": "^6.18.0",
     "underscore": "^1.13.1"
+  },
+  "devDependencies": {
+    "concurrently": "^7.1.0"
   }
 }
